<resources>
    <string name="app_name">Темполидер-Х</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Установки</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="cbSoundOn">Звук включен</string>
    <string name="cbSoundOff">Звук выключен</string>
    <string name="Accurancy">Количество знаков после запятой</string>

    <string name="action_timing">Отсечки</string>
    <string name="action_transfer">Загрузка отсечек в темполидер</string>
    <string name="action_help_main_title">Справка</string>
    <string name="save_data_in_file">Сохранить раскладку как</string>
    <string name="show_list_of_files">Список раскладок</string>
    <string name="change_data">Редактировать раскладку</string>
    <string name="change_temp">Изменить темп </string>

    <string name="start_button">старт</string>
    <string name="stop_button">стоп</string>
    <string name="reset_button">сброс</string>
    <string name="timeValue_item1">0</string>
    <string name="repsValue_item1">1</string>
    <string name="timeValue_item2">0</string>
    <string name="repsValue_item2">1</string>
    <string name="timeValue_item3">0</string>
    <string name="timeValue_item4">0</string>
    <string name="timeValue_item5">0</string>
    <string name="repsValue_item3">1</string>
    <string name="repsValue_item4">1</string>
    <string name="repsValue_item5">1</string>
    <string name="Communicate">Дополнительно</string>

    <string name="new_frag">Новый фрагмент</string>
    <string name="list_empty_tempolider">Данные отсутствуют либо удалены пользователем.
        Создайте новую или загрузите другую раскладку подхода.</string>

    <string-array name="аccurancy_entry_number">
        <item>0.1 сек</item>
        <item>0.01 сек</item>
        <item>0.001 сек</item>
    </string-array>

    <string-array name="аccurancy_entryValues_number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <string-array name="pause_entry_number">
        <item>Приостановка времени </item>
        <item>Приостановка индикации</item>
    </string-array>

    <string-array name="pause_entryValues_number">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="sound_level_entry_number">
        <item>Без звука</item>
        <item>20%</item>
        <item>40%</item>
        <item>60%</item>
        <item>80%</item>
        <item>100%</item>
    </string-array>

    <string-array name="sound_level_entryValues_number">
        <item>0</item>
        <item>20</item>
        <item>40</item>
        <item>60</item>
        <item>80</item>
        <item>100</item>
    </string-array>

    <string-array name="MenuMain">
        <item>Секундомер</item>
        <item>Темполидер</item>
        <item>Раскладки</item>
    </string-array>

    <string-array name="MenuSubMain">
        <item>Oтсечки и график прохождения отрезков</item>
        <item>Установка и воспроизведение темпа движений</item>
        <item>Список сохранённых раскладок</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab_bar">TabBarActivity</string>
    <string name="section_format">Список раскладок %1$d</string>
    <string name="change_name">Изменить</string>
    <string name="editor">Редактор</string>
    <string name="new_name">Создание раскладки</string>
    <string name="Help">Справка</string>
    <string name="Timemeter">Секундомер</string>
    <string name="PaceMaker">Темполидер</string>
    <string name="ListOfTimeReps">Раскладки по темпу</string>
    <string name="Settings">Настройки</string>
    <string name="FileName">Имя раскладки  </string>
    <string name="FileNameInput">Введите имя раскладки</string>
    <string name="DelayOfStart">Задержка старта, сек   </string>
    <string name="DelayOfStartInput">Введите задержку</string>
    <string name="suffix_delay">сек</string>
    <string name="DelayValue">6</string>
    <string name="Fragment">Фрагмент</string>
    <string name="OfSet">подхода</string>
    <string name="FragmentOfSet1">1</string>
    <string name="FragmentOfSet2">2</string>
    <string name="FragmentOfSet3">3</string>
    <string name="FragmentOfSet4">4</string>
    <string name="FragmentOfSet5">5</string>
    <string name="lebelTime">Время</string>
    <string name="Sec">сек</string>
    <string name="lebelCount">Кол-во</string>
    <string name="lebelCountN">раз</string>
    <string name="CreateFileSet">Создать раскладку</string>
    <string name="Name">Имя:  </string>
    <string name="Count">Количество:  </string>
    <string name="CountZeroTime">00:00</string>
    <string name="LowMinus">_</string>
    <string name="DeleteYesNo">Удалить: Вы уверены?</string>
    <string name="DeleteYes">Да</string>
    <string name="DeleteNo">Нет</string>
    <string name="Send">Оценить</string>
    <string name="Share">Поделиться</string>
    <string name="main_menu">Главное меню</string>
    <string name="ExitYesNo">Выход: Вы уверены?</string>
    <string name="continue_task">Продолжить</string>
    <string name="PressStopBefore">Сначала нажмите Стоп</string>
    <string name="graph">График</string>
    <string name="DurationLap">Длительность круга</string>
    <string name="NumberLap">Номер цикла</string>
    <string name="InputNameOfSchelule">Введите непустое имя раскладки</string>
    <string name="InputAnotherName">Такое имя уже существует. Введите другое имя.</string>
    <string name="FillOneFrag">Заполните хотя бы один фрагмент подхода.</string>
    <string name="EditorLaps">Редактор раскладок</string>
    <string name="CancelEdit">Отмена</string>
    <string name="Count1">Количество</string>
    <string name="button_lap">Круг</string>
    <string name="button_start">Старт</string>
    <string name="button_pause">Пауза</string>
    <string name="button_stop">Стоп</string>
    <string name="label_N">№</string>
    <string name="label_time">Время, с</string>
    <string name="label_lap">Круг, с</string>
    <string name="textViewDelay">Задержка, сек</string>
    <string name="textViewRestTime">Время отдыха</string>
    <string name="textViewTimeRemain">До старта, сек</string>
    <string name="textViewelay">Задержка, сек</string>
    <string name="appDescription">Задаёт темп выполнения циклических упражнений</string>
    <string name="head">Заголовок</string>
    <string name="subhead">Подзаголовок</string>
    <string name="help">Справка</string>
    <string name="help_text">СПРАВКА</string>
    <string name="forExit">Для выхода нажмите  НАЗАД  ещё раз</string>
    <string name="listOfNames">Раскладки</string>
    <string name="NN">№</string>
    <string name="_555">555</string>
    <string name="_0_00_0">0:00.0</string>
    <string name="create_raskl">Создать раскладку</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="workOn">РАБОТА</string>
    <string name="stop"> СТОП</string>
    <string name="action_delete">Удалить запись</string>
    <string name="action_change">Изменить запись</string>
    <string name="action_move_temp">Переместить в темполидер</string>
    <string name="action_move_like">Переместить в избранное</string>
    <string name="action_cancel">Отменить</string>
    <string name="system_file">Системный файл. Удаление запрещено.</string>
    <string name="system_file_move">Системный файл. Действие запрещено.</string>
    <string name="system_file_limited">Системный файл. Действия ограничены.</string>
    <string name="system_file_change">Системный файл. Действие запрещено.</string>
    <string name="name_file_dialog">Имя файла</string>
    <string name="date_time">Дата и время записи</string>
    <string name="addDateTime">Добавить дату и время</string>
    <string name="action_save">Сохранить</string>
    <string name="dofromall">Выполнить для всех строк</string>
    <string name="change_time">Изменить время</string>
    <string name="change_count">Изменить количество</string>
    <string name="_0">0</string>
    <string name="_5proc">-5%</string>
    <string name="_1proc">-1%</string>
    <string name="_1proc_plus">+1%</string>
    <string name="_5proc_plus">+5%</string>
    <string name="valueInProc">Величина в процентах</string>
    <string name="tempUp">Повысить темп</string>
    <string name="tempDown">Снизить темп</string>
    <string name="fr_n">Фрагмент №</string>
    <string name="time_sec">Время , с</string>
    <string name="count_reps">Количество , раз</string>
    <string name="cancel_">Отмена</string>
    <string name="priniat">Принять</string>
    <string name="inputFileName">Введите имя файла</string>
    <string name="addDataTime">Добавить дату и время</string>
    <string name="save_show">Сохранить и показать</string>
    <string name="NN_">№</string>
    <string name="time_">Время,с</string>
    <string name="lap">Отрезок,с</string>
    <string name="graf_">График</string>
    <string name="krug">Круг, с</string>
    <string name="now_stop">Сначала нажмите Стоп</string>
    <string name="newExer">Новая раскладка</string>

    <string name="lebelTimeSec">Время, сек</string>
    <string name="lebelCountReps">Кол-во, раз</string>
    <string name="Create">Создать</string>
    <string name="DelayOfStartInputNew">Задержка, сек</string>
    <string name="inputName">Введите имя:</string>
    <string name="delay">Задержка</string>
    <string name="no">Нет</string>
    <string name="save_as">Сохранить</string>
    <string name="screen2_summary">Открываем настройки звука</string>
    <string name="screen2_title">Громкость</string>
    <string name="sound">Звук</string>
    <string name="soundSet">Звук</string>
    <string name="opit">Опыты</string>
    <string name="max_volume">Громкость звуковых сигналов</string>
    <string name="setSound">Установите уровень громкости</string>
    <string name="accurancy">Отсечки</string>
    <string name="lap_accur">Точность отсечек</string>
    <string name="sec">Секундомер</string>
</resources>
