<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_secundomer"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/Timemeter"/>
        <item
            android:id="@+id/nav_tempoleader"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/PaceMaker"/>
        <item
            android:id="@+id/nav_rascladki"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/ListOfTimeReps"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_setting"
            android:title="@string/Settings"/>

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_action_help"
            android:title="@string/Help"/>
    </group>


    <item android:title="@string/Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_thumb_up_black_24dp"
                android:title="@string/Send"/>
        </menu>
    </item>
</menu>
