<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_delete_like"
        android:orderInCategory="20"
        android:title="@string/action_delete"
        />

    <item
        android:id="@+id/menu_change_like"
        android:orderInCategory="30"
        android:title="@string/action_change"
        />

    <item
        android:id="@+id/menu_move_sec_like"
        android:orderInCategory="40"
        android:title="@string/action_move_temp"
        />

    <item
        android:id="@+id/menu_move_temp_like"
        android:orderInCategory="50"
        android:title="@string/action_move_like"
        />

    <item
        android:id="@+id/menu_cancel_like"
        android:orderInCategory="60"
        android:title="@string/action_cancel"
        />
</menu>