<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/accurancy">
    <ListPreference
        android:entries="@array/аccurancy_entry_number"
        android:entryValues="@array/аccurancy_entryValues_number"
        android:defaultValue="2"
        android:key="accurancy"
        android:title="@string/lap_accur"
        android:summary="@string/Accurancy"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/sec">
    <ListPreference
        android:entries="@array/pause_entry_number"
        android:entryValues="@array/pause_entryValues_number"
        android:defaultValue="1"
        android:key="pause_type"
        android:title="Пауза секундомера"
        android:summary="Варианты работы секундомера в режиме паузы"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/soundSet">
        <ListPreference
            android:key="sound_level"
            android:entries="@array/sound_level_entry_number"
            android:entryValues="@array/sound_level_entryValues_number"
            android:defaultValue="80"
            android:title="Громкость"
            android:summary="Громкость звукового сигнала"/>
    </PreferenceCategory>

</PreferenceScreen>
