<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/all_item_set_textview"
                android:background="@drawable/rect">
    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/time_item_set_textview"
        android:layout_alignParentStart="true"
        android:text="@string/_3"
        android:textStyle="bold"
        android:padding="4dp"
        android:textSize="24sp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/reps_item_set_textview"
        android:layout_centerHorizontal="true"
        android:text="@string/_5"
        android:textStyle="bold"
        android:padding="4dp"
        android:gravity="center_horizontal"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:id="@+id/mark_item_set_textview"
        android:layout_alignParentEnd="true"
        android:padding="4dp"
        android:text="@string/_0"
        android:gravity="center"
        android:enabled="false"
        android:textSize="24sp"
        android:textColor="#0512c5"/>

</RelativeLayout>