<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="ru.barcats.tempo_leader_javanew.ui.home.HomeFragment"
        android:label="@string/main_menu"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_secundomer"
            app:destination="@id/nav_secundomer" />
        <action
            android:id="@+id/action_nav_home_to_nav_tempoleader"
            app:destination="@id/nav_tempoleader" />
        <action
            android:id="@+id/action_nav_home_to_nav_help"
            app:destination="@id/nav_help" />
        <action
            android:id="@+id/action_nav_home_to_nav_set"
            app:destination="@id/nav_set" />
        <action
            android:id="@+id/action_nav_home_to_nav_rascladki"
            app:destination="@id/nav_rascladki" />
        <action
            android:id="@+id/action_nav_home_to_newExerciseFragment"
            app:destination="@id/nav_new_exercise" />
    </fragment>

    <fragment
        android:id="@+id/nav_secundomer"
        android:name="ru.barcats.tempo_leader_javanew.ui.sekundomer.SecundomerFragment"
        android:label="@string/Timemeter"
        tools:layout="@layout/fragment_secundomer" >
        <action
            android:id="@+id/action_nav_secundomer_to_nav_grafic"
            app:destination="@id/nav_grafic" />
    </fragment>

    <fragment
        android:id="@+id/nav_tempoleader"
        android:name="ru.barcats.tempo_leader_javanew.ui.tempoleader.TempoleaderFragment"
        android:label="@string/PaceMaker"
        tools:layout="@layout/fragment_tempoleader" >
        <action
            android:id="@+id/action_nav_tempoleader_to_dialogSetDelay"
            app:destination="@id/nav_set_delay" />
        <action
            android:id="@+id/action_nav_tempoleader_to_editorFragment"
            app:destination="@+id/nav_editor" />
    </fragment>

    <fragment
        android:id="@+id/nav_rascladki"
        android:name="ru.barcats.tempo_leader_javanew.ui.raskladki.RaskladkiMainFragment"
        android:label="@string/ListOfTimeReps"
        tools:layout="@layout/fragment_tab_raskladki" >
        <action
            android:id="@+id/action_nav_rascladki_to_nav_tempoleader"
            app:destination="@id/nav_tempoleader" />
    </fragment>

    <fragment
        android:id="@+id/nav_set"
        android:name="ru.barcats.tempo_leader_javanew.ui.settings.PrefFragment"
        android:label="@string/Settings" />

    <fragment
        android:id="@+id/nav_help"
        android:name="ru.barcats.tempo_leader_javanew.ui.help.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />

        <!--    *************************      -->
    <fragment
        android:id="@+id/nav_new_exercise"
        android:name="ru.barcats.tempo_leader_javanew.ui.craeation.NewExerciseFragment"
        android:label="@string/create_raskl"
        tools:layout="@layout/frafment_new_exercise" >
        <action
            android:id="@+id/action_new_exercise_to_nav_tempoleader"
            app:destination="@id/nav_tempoleader" />
    </fragment>
    <dialog
        android:id="@+id/nav_set_delay"
        android:name="ru.barcats.tempo_leader_javanew.ui.tempoleader.dialogs.DialogSetDelayFragment"
        android:label="set_delay"
        tools:layout="@layout/set_delay" >
        <action
            android:id="@+id/action_dialogSetDelay_to_nav_tempoleader"
            app:destination="@id/nav_tempoleader"
            app:launchSingleTop="true" />
    </dialog>
    <fragment
        android:id="@+id/nav_grafic"
        android:name="ru.barcats.tempo_leader_javanew.ui.sekundomer.grafic.GraficFragment"
        android:label="fragment_grafic"
        tools:layout="@layout/fragment_grafic" >
        <action
            android:id="@+id/action_nav_grafic_to_nav_tempoleader"
            app:destination="@id/nav_tempoleader" />
    </fragment>
    <fragment
        android:id="@+id/nav_editor"
        android:name="ru.barcats.tempo_leader_javanew.ui.tempoleader.editor.EditorFragment"
        android:label="@string/change_name"
        tools:layout="@layout/fragment_editor" >
        <argument
            android:name="fileName"
            app:argType="string"
            android:defaultValue="автосохранение_секундомера" />
        <action
            android:id="@+id/action_nav_editor_to_dialogSaveTempFragment"
            app:destination="@id/dialogSaveTempFragment" />
        <action
            android:id="@+id/action_nav_editor_to_dialogChangeTemp"
            app:destination="@id/dialogChangeTemp" />
    </fragment>

    <dialog
        android:id="@+id/dialogSaveTempFragment"
        android:name="ru.barcats.tempo_leader_javanew.ui.tempoleader.dialogsave.DialogSaveFragment"
        android:label="save_data_in_file_new"
        tools:layout="@layout/save_data_in_file_new" >
        <action
            android:id="@+id/action_dialogSaveTempFragment_to_nav_tempoleader"
            app:destination="@id/nav_tempoleader" />
    </dialog>
    <dialog
        android:id="@+id/dialogChangeTemp"
        android:name="ru.barcats.tempo_leader_javanew.ui.tempoleader.dialogs.DialogChangeTempFragment"
        android:label="fragment_dialog_chahge_temp"
        tools:layout="@layout/fragment_dialog_chahge_temp" />

</navigation>